--- a/src/main/resources/ku/cs/bookOrderOfUser.fxml
+++ b/src/main/resources/ku/cs/bookOrderOfUser.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.OrderUserContoller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.OrderUserContoller">
    <children>
       <BorderPane layoutX="-22.0" layoutY="3.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -177,7 +177,7 @@
                               <Insets left="20.0" top="20.0" />
                            </HBox.margin>
                         </Label>
-                        <Button mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="รายการใหม่" textFill="WHITE">
+                        <Button mnemonicParsing="false" onAction="#handleNewBookOrderButton" style="-fx-background-radius: 30;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="รายการใหม่" textFill="WHITE">
                            <font>
                               <Font name="JasmineUPC" size="20.0" />
                            </font>
@@ -185,7 +185,7 @@
                               <Insets left="150.0" top="20.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="28.0" prefWidth="96.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="จัดส่งแล้ว" textFill="WHITE">
+                        <Button mnemonicParsing="false" onAction="#handleCompletedOrderUserButton" prefHeight="28.0" prefWidth="96.0" style="-fx-background-radius: 30;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="จัดส่งแล้ว" textFill="WHITE">
                            <HBox.margin>
                               <Insets left="10.0" top="20.0" />
                            </HBox.margin>
