--- a/src/main/resources/ku/cs/style/PrimaryTheme.css
+++ b/src/main/resources/ku/cs/style/PrimaryTheme.css
@@ -103,3 +103,21 @@
     -fx-effect: dropshadow( three-pass-box, rgb(180, 135, 94), 5, 0.0, 0, 1);
 }
 
+.bevel-orange {
+    -fx-color-one: #F99F28;
+    -fx-color-two: #F99F28;
+    -fx-color-three: #F99F28;
+    -fx-background-color:
+            linear-gradient(#ffffff 0%, -fx-color-two 0%, -fx-color-one 100%),
+            linear-gradient(#ffffff 0%, -fx-color-three 0%);
+    -fx-background-radius: 8, 7, 6;
+    -fx-background-insets: 0, 1, 2;
+    -fx-text-fill: #ffffff;
+}
+.bevel-orange:hover{
+    -fx-color-one: rgb(255, 136, 173);
+    -fx-color-two: rgb(255, 136, 173);
+    -fx-color-three: rgb(255, 136, 173);
+    -fx-effect: dropshadow( three-pass-box, rgb(255, 136, 173), 5, 0.0, 0, 1);
+}
+
