--- a/src/main/resources/ku/cs/accountDetail.fxml
+++ b/src/main/resources/ku/cs/accountDetail.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.AccountDetailController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.AccountDetailController">
     <children>
         <BorderPane layoutX="-22.0" layoutY="3.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <left>
@@ -138,10 +138,14 @@
                                 <Font name="JasmineUPC" size="36.0" />
                             </font>
                         </Label>
-                  <Button layoutX="592.0" layoutY="171.0" mnemonicParsing="false" onAction="#handleToEditInformationPageButton" prefHeight="31.0" prefWidth="82.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="แก้ไข" textFill="WHITE">
+                  <Button layoutX="592.0" layoutY="171.0" mnemonicParsing="false" onAction="#handleToEditInformationPageButton" prefHeight="31.0" prefWidth="82.0" stylesheets="@style/PrimaryTheme.css" text="แก้ไข" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <styleClass>
+                        <String fx:value="font_jasmine_16pt" />
+                        <String fx:value="bevel-orange" />
+                     </styleClass>
                   </Button>
                         <Button fx:id="forAdminButton" layoutX="335.0" layoutY="171.0" mnemonicParsing="false" onAction="#handleToForAdminButton" prefHeight="31.0" prefWidth="239.0" style="-fx-background-color: #fffcf1;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ส่วนของผู้พัฒนาระบบ" textFill="#fffcf1">
                             <font>
@@ -153,10 +157,14 @@
                                 <Font name="JasmineUPC" size="36.0" />
                             </font>
                         </Label>
-                        <Button layoutX="586.0" layoutY="374.0" mnemonicParsing="false" onAction="#handleToEditAddressButton" prefHeight="31.0" prefWidth="93.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="แก้ไขที่อยู่" textFill="WHITE">
+                        <Button layoutX="586.0" layoutY="374.0" mnemonicParsing="false" onAction="#handleToEditAddressButton" prefHeight="31.0" prefWidth="93.0" stylesheets="@style/PrimaryTheme.css" text="แก้ไขที่อยู่" textFill="WHITE">
                             <font>
                                 <Font size="18.0" />
                             </font>
+                     <styleClass>
+                        <String fx:value="font_jasmine_16pt" />
+                        <String fx:value="bevel-orange" />
+                     </styleClass>
                         </Button>
                         <Label layoutX="30.0" layoutY="413.0" stylesheets="@style/PrimaryTheme.css" text="โปรโมชั่น" textFill="#a05e07">
                             <font>
