--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -22,7 +22,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane onMouseClicked="#handleToBookSortFromShop" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.BookDetailController">
+<AnchorPane onMouseClicked="#handleToBookSortFromShop" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.BookDetailController">
    <children>
       <HBox prefHeight="69.0" prefWidth="1024.0" stylesheets="@style/style.css">
          <children>
@@ -331,7 +331,7 @@
                      </children>
                   </VBox>
                   <Label layoutX="105.0" layoutY="589.0" prefHeight="26.0" prefWidth="166.0" styleClass="font_jasmine_25pt" stylesheets="@style/PrimaryTheme.css" text="คะแนนของสินค้า" textFill="#f99f28" />
-                  <Button layoutX="819.0" layoutY="588.0" mnemonicParsing="false" onAction="#handleToBuyBook" prefHeight="46.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="WHITE">
+                  <Button layoutX="819.0" layoutY="588.0" mnemonicParsing="false" onAction="#handleToBuyBook" prefHeight="46.0" prefWidth="145.0" style="-fx-background-radius: 20;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
