--- a/src/main/resources/ku/cs/buyBookPopup.fxml
+++ b/src/main/resources/ku/cs/buyBookPopup.fxml
@@ -70,7 +70,7 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <Button layoutX="119.0" layoutY="214.0" mnemonicParsing="false" onAction="#handleComfirmBuyBook" prefHeight="34.0" prefWidth="146.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="ยืนยันสั่งซื้อสินค้า" textFill="WHITE">
+      <Button layoutX="119.0" layoutY="214.0" mnemonicParsing="false" onAction="#handleComfirmBuyBook" prefHeight="34.0" prefWidth="146.0" style="-fx-background-radius: 20;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="ยืนยันสั่งซื้อสินค้า" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="21.0" />
          </font>
