--- a/src/main/resources/ku/cs/editInformation.fxml
+++ b/src/main/resources/ku/cs/editInformation.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -15,16 +16,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #c9ad88;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.EditInformationController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #c9ad88;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.EditInformationController">
    <children>
       <VBox layoutX="272.0" layoutY="23.0" prefHeight="625.0" prefWidth="378.0" style="-fx-background-color: white; -fx-background-radius: 20;" AnchorPane.bottomAnchor="22.600000000000023" AnchorPane.topAnchor="23.0">
          <children>
             <AnchorPane prefHeight="625.0" prefWidth="378.0" style="-fx-background-radius: 20; -fx-background-color: white;">
                <children>
-                  <Button layoutX="242.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleGoToInformationPageWhenEditInformation" prefHeight="28.0" prefWidth="74.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="บันทึก" textFill="WHITE">
+                  <Button layoutX="242.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleGoToInformationPageWhenEditInformation" prefHeight="28.0" prefWidth="74.0" style="-fx-background-radius: 10;" stylesheets="@style/PrimaryTheme.css" text="บันทึก" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
+                     <styleClass>
+                        <String fx:value="font_jasmine_16pt" />
+                        <String fx:value="bevel-orange" />
+                     </styleClass>
                   </Button>
                   <Label layoutX="35.0" layoutY="409.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css">
                      <font>
@@ -71,10 +76,14 @@
                         <Font name="JasmineUPC" size="13.0" />
                      </font>
                   </Label>
-                  <Button layoutX="152.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleGotoInformationPageWhenCancel" prefHeight="28.0" prefWidth="74.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ยกเลิก" textFill="WHITE">
+                  <Button layoutX="152.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleGotoInformationPageWhenCancel" prefHeight="28.0" prefWidth="74.0" style="-fx-background-radius: 10;" stylesheets="@style/PrimaryTheme.css" text="ยกเลิก" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
+                     <styleClass>
+                        <String fx:value="font_jasmine_16pt" />
+                        <String fx:value="bevel-orange" />
+                     </styleClass>
                   </Button>
                   <PasswordField fx:id="passwordField" layoutX="41.0" layoutY="335.0" onKeyReleased="#handleKeyPassword" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
                      <font>
