--- a/src/main/resources/ku/cs/orderList.fxml
+++ b/src/main/resources/ku/cs/orderList.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.seller.OrderListController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.seller.OrderListController">
     <children>
         <BorderPane layoutX="-22.0" layoutY="3.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -202,7 +202,7 @@
                         </ScrollPane>
                         <HBox prefHeight="80.0" prefWidth="698.0">
                             <children>
-                                <Button fx:id="allSellerStockButtonn" mnemonicParsing="false" onAction="#handleSellerStockButton" prefHeight="40.0" prefWidth="175.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ดูสินค้าทั้งหมด" textFill="WHITE">
+                                <Button fx:id="allSellerStockButtonn" mnemonicParsing="false" onAction="#handleSellerStockButton" prefHeight="40.0" prefWidth="175.0" style="-fx-background-radius: 10;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="ดูสินค้าทั้งหมด" textFill="WHITE">
                                     <font>
                                         <Font name="JasmineUPC" size="28.0" />
                                     </font>
