--- a/src/main/resources/ku/cs/choiceApplySubTypeBook.fxml
+++ b/src/main/resources/ku/cs/choiceApplySubTypeBook.fxml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.seller.ApplyBookController" >
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ChoiceApplySubtypeBookController">
    <children>
       <Label fx:id="subTypeBookLabel" layoutX="50.0" layoutY="10.0" text="ประเภทย่อย">
          <font>
             <Font name="JasmineUPC" size="32.0" />
          </font>
       </Label>
-      <TextField fx:id="subTypeBookTextField" layoutX="55.0" layoutY="40.0" prefHeight="40.0" prefWidth="580.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+      <TextField fx:id="subTypeBookTextField" layoutX="55.0" layoutY="40.0" prefHeight="40.0" prefWidth="526.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+      <Button fx:id="addSubTypeBookButton"  onAction="#handleAddSubTypeButton" layoutX="593.0" layoutY="40.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="61.0" style="-fx-background-color: c9ad88; -fx-background-radius: 20;" text="Add" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
