--- a/src/main/resources/ku/cs/aboutUs.fxml
+++ b/src/main/resources/ku/cs/aboutUs.fxml
@@ -10,13 +10,13 @@
    <children>
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ffffffcb" height="728.0" strokeType="INSIDE" width="994.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0" />
       <Line endX="802.8929443359375" endY="-7.62939453125E-6" layoutX="144.0" layoutY="65.0" startX="-100.0" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="42.0" />
-      <Button fx:id="aboutUsButton" layoutX="31.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleAboutUsButton" style="-fx-background-color: transparent;" text="เกี่ยวกับกลุ่มผู้พัฒนา">
+      <Button fx:id="aboutUsButton" layoutX="43.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleAboutUsButton" style="-fx-background-color: transparent;" text="เกี่ยวกับ JAVAPAI">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Button>
-      <Line endX="100.0" layoutX="120.0" layoutY="50.0" rotate="90.0" startX="81.24583435058594" startY="0.41674506664276123" />
-      <Button fx:id="adminInfoButton" layoutX="211.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleAdminInfoButton" style="-fx-background-color: transparent;" text="ข้อมูลผู้พัฒนา">
+      <Line endX="100.0" layoutX="114.0" layoutY="50.0" rotate="90.0" startX="81.24583435058594" startY="0.41674506664276123" />
+      <Button fx:id="adminInfoButton" layoutX="208.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleAdminInfoButton" style="-fx-background-color: transparent;" text="ข้อมูลผู้พัฒนา">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
@@ -32,7 +32,7 @@
             </GridPane>
          </children>
       </HBox>
-      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="965.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#handleBackToHome">
+      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="965.0" layoutY="31.0" onMouseClicked="#handleBackToHome" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/BackIcon.png" />
          </image>
