--- a/src/main/resources/ku/cs/choiceApplySubTypeBook.fxml
+++ b/src/main/resources/ku/cs/choiceApplySubTypeBook.fxml
@@ -6,18 +6,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ChoiceApplySubtypeBookController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="109.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ChoiceApplySubtypeBookController">
    <children>
       <Label fx:id="subTypeBookLabel" layoutX="50.0" layoutY="10.0" text="ประเภทย่อย">
          <font>
             <Font name="JasmineUPC" size="32.0" />
          </font>
       </Label>
-      <TextField fx:id="subTypeBookTextField" layoutX="55.0" layoutY="40.0" prefHeight="40.0" prefWidth="526.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
-      <Button fx:id="addSubTypeBookButton"  onAction="#handleAddSubTypeButton" layoutX="593.0" layoutY="40.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="61.0" style="-fx-background-color: c9ad88; -fx-background-radius: 20;" text="Add" textFill="WHITE">
+      <TextField fx:id="subTypeBookTextField" layoutX="55.0" layoutY="40.0" onKeyReleased="#handleKeySubTypeBookTextField" prefHeight="40.0" prefWidth="526.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+      <Button fx:id="addSubTypeBookButton" layoutX="593.0" layoutY="40.0" mnemonicParsing="false" onAction="#handleAddSubTypeButton" prefHeight="40.0" prefWidth="61.0" style="-fx-background-color: c9ad88; -fx-background-radius: 20;" text="Add" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Button>
+      <Label fx:id="notificationAddButton" layoutX="73.0" layoutY="85.0" textFill="#ea0b0b">
+         <font>
+            <Font name="JasmineUPC" size="20.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
