--- a/src/main/resources/ku/cs/promotion.fxml
+++ b/src/main/resources/ku/cs/promotion.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -19,9 +20,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.seller.SellerStockController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.PromotionController">
    <children>
-      <BorderPane layoutX="-22.0" layoutY="3.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
             <HBox fx:id="head1" prefHeight="69.0" prefWidth="1024.0" styleClass="backgroundColorInHeadPages" stylesheets="@style/style.css">
                <children>
@@ -164,11 +165,11 @@
             </HBox>
          </left>
          <center>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
-                  <HBox prefHeight="64.0" prefWidth="698.0">
+                  <HBox prefHeight="64.0" prefWidth="698.0" style="-fx-background-color: white;">
                      <children>
-                        <Label prefHeight="31.0" prefWidth="234.0" text="สินค้าทั้งหมด" textFill="#b4875e">
+                        <Label prefHeight="31.0" prefWidth="234.0" text="โปรโมชั่นทั้งหมด" textFill="#b4875e">
                            <font>
                               <Font name="JasmineUPC" size="42.0" />
                            </font>
@@ -176,49 +177,21 @@
                               <Insets left="20.0" top="20.0" />
                            </HBox.margin>
                         </Label>
-                        <Button mnemonicParsing="false" onAction="#handleToPromotionPageButton" style="-fx-background-radius: 10;" text="โปรโมชั่น" textFill="WHITE">
-                           <stylesheets>
-                              <URL value="@style/PrimaryTheme.css" />
-                              <URL value="@style/style.css" />
-                           </stylesheets>
-                           <styleClass>
-                              <String fx:value="font_jasmine_16pt" />
-                              <String fx:value="backgroundColorLightBrownButton" />
-                           </styleClass>
-                           <HBox.margin>
-                              <Insets left="350.0" top="15.0" />
-                           </HBox.margin>
-                        </Button>
                      </children>
                   </HBox>
-                  <ScrollPane fx:id="scoll" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefHeight="500.0" prefWidth="698.0" style="-fx-background-color: fffff;" VBox.vgrow="ALWAYS">
+                  <ScrollPane fx:id="scoll" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefHeight="500.0" prefWidth="698.0" style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
                      <content>
-                        <GridPane fx:id="grid" style="-fx-background-color: ffffff;">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                        </GridPane>
+                        <FlowPane fx:id="promotionFlowPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" />
                      </content>
                   </ScrollPane>
                   <HBox prefHeight="62.0" prefWidth="698.0">
                      <children>
-                        <Button fx:id="orderListButtonn" mnemonicParsing="false" onAction="#handleOrderListButton" prefHeight="40.0" prefWidth="150.0" style="-fx-background-radius: 10;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="รายการสั่งซื้อ" textFill="WHITE">
+                        <Button mnemonicParsing="false" onAction="#handleToCreatPromotionPageButton" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="เพิ่มโปรโมชั่น" textFill="WHITE">
                            <font>
                               <Font name="JasmineUPC" size="28.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="360.0" top="10.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="addStockButton" mnemonicParsing="false" onAction="#handleAddStockButton" prefHeight="40.0" prefWidth="150.0" style="-fx-background-radius: 10;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="เพิ่มสินค้า" textFill="WHITE">
-                           <font>
-                              <Font name="JasmineUPC" size="28.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="10.0" />
+                              <Insets left="520.0" top="10.0" />
                            </HBox.margin>
                         </Button>
                      </children>
